--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry flake8
           poetry install
+          poetry add pylint
       - name: Run pylint
         run: poetry run pylint dotcom
       - name: Run flake8
