--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -15,13 +15,11 @@ jobs:
           python-version: '3.x'
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip poetry flake8
+          python -m pip install --upgrade pip poetry
           poetry install
-          poetry add pylint
-      - name: Run pylint
-        run: poetry run pylint dotcom
+          poetry add flake8
       - name: Run flake8
-        run: python -m flake8 dotcom
+        run: poetry run flake8 dotcom
   formatting:
     runs-on: ubuntu-latest
     steps:
