--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.29.0"
+black = "^24.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
