--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.29.0"
 black = "^24.3.0"
+flake8 = "^7.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
