--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["shahdivyank <divyank.shah.2016@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.29.0"
+typing-extensions = "^4.11.0"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^69.2.0"
